samples/_failures_safe/1761127807_89c7ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3f336a9.c: In function ‘main’:
./samples/SAFE/__tmp_b3f336a9.c:179:5: error: expected identifier or ‘(’ at end of input
  179 |     size_t
      |     ^~~~~~
./samples/SAFE/__tmp_b3f336a9.c:179:5: error: expected declaration or statement at end of input
